--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.21.0",
     "swiper": "^6.3.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.4.8"
+    "vue-router": "^3.4.8",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
